--- a/configs/2M_vec_gap_bb.yaml
+++ b/configs/2M_vec_gap_bb.yaml
@@ -8,10 +8,13 @@ d_model: 40
 n_heads: 8
 n_layers: 6
 dropout_embedding: 0.
-dropout_ca: 0.1
-dropout_sa: 0.1
 dropout_relu: 0.1
 dropout_residual: 0.1
 dropout_output: 0
-add_cm_attention_back: True
-add_self_attention_fusion: True
+module_time_reduce: gap
+
+attention_type: bigbird
+block_size: 64
+num_global_tokens: 16
+num_random_tokens: 10
+dropout_attention: 0.
