--- a/configs/3+1M_vec_gap_bb.yaml
+++ b/configs/3+1M_vec_gap_bb.yaml
@@ -1,20 +1,20 @@
 input_modality_channels:
-  - 256
   - 25
+  - 35
+  - 256
 output_dim:
-  - 1
-  - 1
+  - 5
 d_model: 40
 n_heads: 8
 n_layers: 6
 dropout_embedding: 0.
-dropout_ca: 0.1
-dropout_sa: 0.1
 dropout_relu: 0.1
 dropout_residual: 0.1
 dropout_output: 0
-auto_mask: True
-time_reduce_type: gap
+
+multimodal_signal_type: gap
+multimodal_signal_time_dim: 450
+module_time_reduce: gap
 
 attention_type: bigbird
 block_size: 64
