--- a/configs/LinMulT_with_aux.yaml
+++ b/configs/LinMulT_with_aux.yaml
@@ -22,33 +22,52 @@ attention_type: linear # bigbird, softmax, mha
 # num_random_tokens: 10
 # dropout_attention: 0.
 
+dropout_pe: 0
 dropout_embedding: 0
 dropout_relu: 0.1
 dropout_residual: 0.1
 dropout_output: 0
 
 # LinMulT architecture params
-n_layers_sa: 3
+n_layers_sa: 6
 
 time_dim_aligner: aap
 aligned_time_dim: 300
 
 multimodal_signal: True
-n_layers_mms: 3
+n_layers_mms: 6
 tam_fusion: True
+n_layers_fusion: 6
+unimodal_sat: True
 
 # LinMult task-specific output heads
 heads:
   - name: head_0
     type: sequence_aggregation
     norm: bn
-    pooling: gap
-    hidden_dim: 256 
+    pooling: attentionpool
+    hidden_dim: 128
     dropout: 0.1
     output_dim: 7
   - name: head_1
     type: sequence
     norm: bn
-    hidden_dim: 256
+    hidden_dim: 128
+    dropout: 0.1
+    output_dim: 2
+
+# auxiliary heads
+auxiliary_heads:
+  - name: aux_head_0
+    type: sequence_aggregation
+    norm: bn
+    pooling: attentionpool
+    hidden_dim: 128
+    dropout: 0.1
+    output_dim: 7
+  - name: aux_head_1
+    type: sequence
+    norm: bn
+    hidden_dim: 128
     dropout: 0.1
     output_dim: 2
